--- a/server-web/src/catalogs/components/catalog-view-behavior.html
+++ b/server-web/src/catalogs/components/catalog-view-behavior.html
@@ -1,9 +1,9 @@
 <script>
     'use strict';
 
-    var SumusBehaviors = SumusBehaviors || {};
+    var AlexandriaBehaviors = AlexandriaBehaviors || {};
 
-    SumusBehaviors.CatalogViewBehavior = {
+    AlexandriaBehaviors.CatalogViewBehavior = {
 
         Dictionary : {
             es: {
