--- a/server-web/src/catalogs/components/catalog-list.html
+++ b/server-web/src/catalogs/components/catalog-list.html
@@ -14,7 +14,7 @@
 <link rel="import" href="catalog-sorting.html">
 <link rel="import" href="catalog-cluster-dialog.html">
 <link rel="import" href="catalog-toolbar.html">
-<link rel="import" href="../date-behavior.html">
+<link rel="import" href="../alexandria-date-behavior.html">
 
 <dom-module id="catalog-list">
 
@@ -295,7 +295,7 @@
                 _selectionEnabled : { type: Boolean, value: function() { return false; } }
             },
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior, KonosBehaviors.CatalogBehavior, SumusBehaviors.DateBehavior ],
+            behaviors: [ CottonBehaviors.TranslatorBehavior, KonosBehaviors.CatalogBehavior, AlexandriaBehaviors.DateBehavior ],
 
             attached: function () {
                 this.translate(CatalogListDictionary);
