alexandria-activity: Added support for uploading files

--- a/alexandria/activity-elements-activity/src/widgets/_common/layout/alexandria-layout-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/layout/alexandria-layout-behavior.html
@@ -120,7 +120,7 @@
             try {
                 var label = Cookies.get("alexandria-layout");
                 label = label != null && label !== "" ? label : (itemList.length > 0 ? itemList[0].label : null);
-                if (this._indexOf(label) == -1) label = (itemList.length > 0 ? itemList[itemList.length-1].label : null);
+                if (this._indexOf(label) == -1) label = (itemList.length > 0 ? itemList[0].label : null);
                 return label;
             }
             catch(e) {
